--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-  <header class="header">
+<!--   <header class="header">
     <div class="container header__container">
       <nav class="navigation header__navigation">
         <a class="logo navigation__logo" href="index.html"> Web<span class="logo--color-light">Studio</span></a>
@@ -54,7 +54,7 @@
         </div>
       </nav>
     </div>
-  </header>
+  </header> -->
 
   <main>
     <section class="banner main__banner">
@@ -110,7 +110,7 @@
       </div>
     </section>
 
-    <section class="pictures main__pictures">
+<!--     <section class="pictures main__pictures">
       <div class="container">
         <h2 class="pictures__title">Чим ми займаємося</h2>
         <ul class="pictures__list">
@@ -136,9 +136,9 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
-    <section class="people main__people">
+<!--     <section class="people main__people">
       <div class="container">
         <h2 class="people__title">Наша команда</h2>
         <ul class="people__list">
@@ -313,9 +313,9 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
-    <section class="icons main__partners">
+<!--     <section class="icons main__partners">
       <div class="container">
         <h2 class="icons__title">Постійні клієнти</h2>
         <ul class="icons__list">
@@ -369,10 +369,10 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
   </main>
 
-  <footer>
+<!--   <footer>
     <div class="container footer__container">
       <div class="footer__contacts">
         <a class="logo footer__logo" href="index.html"> Web<span class="logo--color-dark">Studio</span></a>
@@ -442,9 +442,9 @@
         </form>
       </div>
     </div>
-  </footer>
+  </footer> -->
 
-  <div class="backdrop is-hidden" data-modal>
+<!--   <div class="backdrop is-hidden" data-modal>
     <div class="modal" data-modal-open>
       <button type="button" class="modal-close" data-modal-close>
         <svg class="modal-close-icon" width="14" height="14">
@@ -509,7 +509,7 @@
       </form>
     </div>
 
-  </div>
+  </div> -->
   <script src="./js/modal.js"></script>
 
 </body>
