--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@
       </div>
     </section> -->
 
-    <!--     <section class="people main__people">
+        <section class="people main__people">
       <div class="container">
         <h2 class="people__title">Наша команда</h2>
         <ul class="people__list">
 
           <li class="people__item">
-            <img src="img/teammate-1.jpg" alt="Член команди 1" width="270" height="260">
+            <img class="people__img" src="img/teammate-1.jpg" alt="Член команди 1" width="270" height="260">
             <div class="people__wrap">
               <h3 class="people__name">Ігор Дем'яненко</h3>
               <p class="people__position">Product Designer</p>
@@ -186,7 +186,7 @@
           </li>
 
           <li class="people__item">
-            <img src="img/teammate-2.jpg" alt="Член команди 2" width="270" height="260">
+            <img class="people__img" src="img/teammate-2.jpg" alt="Член команди 2" width="270" height="260">
             <div class="people__wrap">
               <h3 class="people__name">Ольга Рєпіна</h3>
               <p class="people__position">Frontend Developer</p>
@@ -228,7 +228,7 @@
           </li>
 
           <li class="people__item">
-            <img src="img/teammate-3.jpg" alt="Член команди 3" width="270" height="260">
+            <img class="people__img" src="img/teammate-3.jpg" alt="Член команди 3" width="270" height="260">
             <div class="people__wrap">
               <h3 class="people__name">Микола Тарасов</h3>
               <p class="people__position">Marketing</p>
@@ -271,7 +271,7 @@
           </li>
 
           <li class="people__item">
-            <img src="img/teammate-4.jpg" alt="Член команди 4" width="270" height="260">
+            <img class="people__img" src="img/teammate-4.jpg" alt="Член команди 4" width="270" height="260">
             <div class="people__wrap">
               <h3 class="people__name">Михайло Єрмаков</h3>
               <p class="people__position">UI Designer</p>
@@ -313,9 +313,9 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
 
-    <!--     <section class="icons main__partners">
+        <section class="icons main__partners">
       <div class="container">
         <h2 class="icons__title">Постійні клієнти</h2>
         <ul class="icons__list">
@@ -369,10 +369,10 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
   </main>
 
-  <!--   <footer>
+    <footer>
     <div class="container footer__container">
       <div class="footer__contacts">
         <a class="logo footer__logo" href="index.html"> Web<span class="logo--color-dark">Studio</span></a>
@@ -426,7 +426,7 @@
         </ul>
       </div>
 
-      <div class="footer__subs">
+<!--       <div class="footer__subs">
         <form class="subs__form">
           <label for="footer-user-email" class="subs__title">Підпишіться на розсилку</label>
           <div class="subs__wrap">
@@ -440,9 +440,9 @@
             </button>
           </div>
         </form>
-      </div>
+      </div> -->
     </div>
-  </footer> -->
+  </footer>
 
   <!--   <div class="backdrop is-hidden" data-modal>
     <div class="modal" data-modal-open>
