--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-  <!--   <header class="header">
+    <header class="header">
     <div class="container header__container">
       <nav class="navigation header__navigation">
         <a class="logo navigation__logo" href="index.html"> Web<span class="logo--color-light">Studio</span></a>
@@ -52,9 +52,16 @@
             </li>
           </ul>
         </div>
+
+<!--         <button type="button">
+          <svg width="24" height="16"> 
+            <use href="./img/icons.svg#icon-"></use>
+          </svg>
+        </button> -->
+
       </nav>
     </div>
-  </header> -->
+  </header>
 
   <main>
     <section class="banner main__banner">
@@ -377,7 +384,7 @@
       <div class="footer__contacts">
         <a class="logo footer__logo" href="index.html"> Web<span class="logo--color-dark">Studio</span></a>
         <address id="contacts">
-          <ul>
+          <ul class="footer__contacts-list">
             <li class="footer__contacts-item"><a class="footer__adds" href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
                 target="_blank" rel="noopener noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26 </a></li>
             <li class="footer__contacts-item"><a class="footer__contact-link"
@@ -426,7 +433,7 @@
         </ul>
       </div>
 
-<!--       <div class="footer__subs">
+      <div class="footer__subs">
         <form class="subs__form">
           <label for="footer-user-email" class="subs__title">Підпишіться на розсилку</label>
           <div class="subs__wrap">
@@ -440,11 +447,11 @@
             </button>
           </div>
         </form>
-      </div> -->
+      </div>
     </div>
   </footer>
 
-  <!--   <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
     <div class="modal" data-modal-open>
       <button type="button" class="modal-close" data-modal-close>
         <svg class="modal-close-icon" width="14" height="14">
@@ -509,7 +516,7 @@
       </form>
     </div>
 
-  </div> -->
+  </div>
   <script src="./js/modal.js"></script>
 
 </body>
