--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <ul class="contacts__list">
             <li class="contacts__item">
               <a class="contacts__link" href="mailto:info@devstudio.com">
-                <svg width="16" height="12">
+                <svg class="img__mail" width="14" height="10">
                   <use href="./img/icons.svg#icon-mail-icon"></use>
                 </svg>
                 info@devstudio.com
@@ -49,7 +49,7 @@
             </li>
             <li class="contacts__item">
               <a class="contacts__link" href="tel:+380961111111">
-                <svg width="10" height="16">
+                <svg class="img__tel" width="10" height="14">
                   <use href="./img/icons.svg#icon-phone-icon"></use>
                 </svg>
                 +38 096 111 11 11
@@ -528,6 +528,7 @@
 
     <footer>
     <div class="container footer__container">
+      <div class="tablet__wrap">
       <div class="footer__contacts">
         <a class="logo footer__logo" href="index.html"> Web<span class="logo--color-dark">Studio</span></a>
         <address id="contacts">
@@ -579,7 +580,7 @@
           </li>
         </ul>
       </div>
-
+      </div>
       <div class="footer__subs">
         <form class="subs__form">
           <label for="footer-user-email" class="subs__title">Підпишіться на розсилку</label>
